# elyze

./: AUTHORS  CHANGELOG.md  Cargo.toml  Changelog.md  Readme.md
.github/workflows/: changelog.yml  check.yml  publish.yml  rust.yml
examples/: addition.rs  builtin_tokens.rs  colors.rs  delimited_group.rs  expression.rs  genetic.rs  hello_world_acceptance.rs  hello_world_acceptance2.rs  last.rs  matcher.rs  number.rs  operators.rs  operators_accptor.rs  operators_accptor_reusable.rs  peek.rs  peek_first_operator.rs  peek_from_visitor.rs  peeking.rs  recognizable.rs  recognize.rs  recognize2.rs  recognize_slice.rs  recognizer.rs  recognizer_to_visitor.rs  scanner.rs  separated_list.rs  tokens.rs  turbofish.rs  turbofish_data.rs  turbofish_data_visitor.rs  until.rs  whitepaces.rs
src/: acceptor.rs  errors.rs  lib.rs  matcher.rs  peek.rs  peeker.rs  recognizer.rs  scanner.rs  separated_list.rs  visitor.rs
src/bytes/: components.rs  matchers.rs  mod.rs  recognizer.rs  token.rs
src/bytes/components/: groups.rs  until_end.rs
src/bytes/primitives/: binary_operator.rs  mod.rs  number.rs  string.rs  tag.rs~  whitespace.rs
