[package]
name = "elyze"
version = "1.5.4"
edition = "2024"
homepage = "https://github.com/Elyze-Parser/elyze"
repository = "https://github.com/Elyze-Parser/elyze"
documentation = "https://docs.rs/elyze/latest/elyze/"
authors = [
    "Akanoa <dev@guern.eu>"
]
description = "Elyze is an extensible general purpose framework parser allowing to parser any type of data without allocation."
publish = true
keywords = [
    "parser",
    "lexer",
    "tokenizer",
]
license = "BSD-3-Clause"
readme = "Readme.md"

[dependencies]
thiserror = "2.0.12"
rand = "0.9.1"
rand_chacha = "0.9.0"

[lints]
clippy.needless_doctest_main = "allow"